[package]
name = "parity-analyzer"
version = "0.1.0"
authors = ["Souvik Banerjee <souvik1997@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.0.3"
derive_more = "0.14.0"
csv = "1.0.6"
gnuplot = "0.0.30"
flate2 = "1.0.7"
chrono = "0.4.6"